--- a/templates/index.html
+++ b/templates/index.html
@@ -1,42 +1,124 @@
 {% extends "base.html" %}
-{% block title %}
-URL Shortner
-{% endblock title %}
 {% block container %}
- <div class="page-header">
-          <h1>Opensooq URL Shortener</h1>
-        </div>
-<div class="container">
-<form action="/" class="form-horizontal" method="POST">
-    <fieldset>
-        {{ form }}
-        <div class="form-group">
-        <label for="longUrl">Url</label>
-        <input required="true" type="text" class="form-control" id="longUrl" name="longUrl" maxlength="1024" placeholder="https://www.example.com">
-        </div>
-        <button type="submit" class="btn btn-primary btn-space">Submit</button>
-    </fieldset>
-</form>
-</div>
-{% if messages %}
-    {% for message in messages %}
-        {{ message|safe }}
-    {% endfor %}
-{% endif %}
 
-<hr/>
+
+<section id="shortenBlock">
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-md-12 ">
+				<h1>
+					<img src="/assets/images/gloom.png" class="squeeze" width="135">
+					<span>Gloom</span>
+				</h1>
+				<h2 class="element">
+					<span class="sub-element">Your new URL is one click away</span>
+				</h2>
+
+				<div class="formContainer">
+					<!-- shorten form -->
+					<form action="/" method="post" class="row">
+						{{ form }}
+						<div class="col-md-3 col-sm-2 emptyDiv"></div>
+						<div class="col-md-3 col-sm-4">
+							<input required="true" type="text" id="longUrl" name="longUrl" maxlength="1024" class="form-control" placeholder="https://www.example.com">
+						</div>
+						<div class="col-md-3 col-sm-4 text-right">
+							<button type="submit" class="form-control gloomBtn">
+								<span class="icon-gloom"></span>
+								<span>GLOOM IT</span>
+							</button>
+							<button type="submit" class="form-control searchBtn" data-role="search-stats">
+								<span class="icon-search"></span>
+								<span>SEARCH</span>
+							</button>
+						</div>
+						<div class="col-md-3 col-sm-2 emptyDiv"></div>
+					</form>
+					<!-- shorten form -->
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+<!-- shorten url -->
 {% if item %}
-<strong>short: </strong><a class="shortLink" href="{{item.short}}" target="_blank" >{{item.short}}</a>
-<button class="btn" data-clipboard-action="copy" data-clipboard-target=".shortLink">Copy</button>
-<br/>
-<br/>
-<strong>url: </strong><a href="{{item.url}}" target="_blank">{{item.url}}</a>
-<br/>
-<br/>
-<strong>clicks: </strong> {{item.clicks}}<br/>
-<br/>
-<strong>last click: </strong>{{item.updated_at|datetime}}
-<br/>
+	<section id="shortenedUrl">
+		<div>
+			<div class="row">
+				<div class="col-md-12 col-sm-12">
+					<div class="col-md-2 col-sm-2"></div>
+					<div class="col-md-8 col-sm-8 text-center">
+						<a class="shortLink shortened-new-url" href="{{item.short}}" target="_blank" >{{item.short}}</a>
+						<button class="form-copy" data-clipboard-action="copy" data-clipboard-target=".shortLink">Copy</button>
+					</div>
+					<div class="col-md-2 col-sm-2"></div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- end shorten url -->
+
+	{% if messages %}
+	    {% for message in messages %}
+	        {{ message|safe }}
+	    {% endfor %}
+	{% endif %}
+
+	<!-- start features -->
+	
+	<section id="statistics">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12 text-center">
+					<div class="title">
+						<h2>Statistics</h2>
+					</div>
+					
+					<div class="col-md-6 col-sm-6">
+						<i class="icon icon-timer"></i>
+						<h4 class="text-uppercase">Last Click</h4>
+						<div>
+							<span class="totalClicks">{{item.updated_at|datetime}}</span>
+						</div>
+					</div>
+					<div class="col-md-6 col-sm-6">
+						<i class="icon icon-chart"></i>
+						<h4 class="text-uppercase">Total Clicks</h4>
+						<div>
+							<span class="totalClicks">{{item.clicks}}</span>
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</div>
+	</section>
+	{% endif %}
+	<!-- end features -->
+{% if item %}
+	<footer>
+{% else %}
+	<footer class="fixed">
 {% endif %}
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12 text-center">
+					
+					<ul class="social_icon">
+						<li><a href="http://www.facebook.com/OpenSooq.Jordan" class="icon-facebook"></a></li>
+						<li><a href="https://twitter.com/OpenSooqJordan" class="icon-twitter"></a></li>
+						<li><a href="https://plus.google.com/+opensooq/posts" class="icon-google-plus"></a></li>
+						<li><a href="http://www.youtube.com/opensooq" class="icon-youtube"></a></li>
+						<li><a href="https://www.instagram.com/opensooq.jordan/" class="icon-instagram"></a></li>
+						<li><a href="https://www.snapchat.com/add/opensooqjordan" class="icon-snapchat"></a></li>
+					</ul>
+
+					<p class="templatemo-copyright">Copyright © 2018 OpenSooq.com. All rights reserved</p>
+					<p class="templatemo-copyright">جميع الحقوق محفوظة لموقع السوق المفتوح © 2018</p>
+				</div>						
+			</div>
+		</div>
+	</footer>
 
 {% endblock container %}
